--- a/index.html
+++ b/index.html
@@ -1,1 +1,90 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>DreamTravel | Explore Beautiful Destinations</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+    <!-- Google Font -->
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+
+<header class="header">
+    <div class="container nav">
+        <div class="logo">Dream<span>Travel</span></div>
+        <nav>
+            <a href="#home">Home</a>
+            <a href="#packages">Packages</a>
+            <a href="#about">About</a>
+            <a href="#contact">Contact</a>
+        </nav>
+    </div>
+</header>
+
+<section class="hero" id="home">
+    <div class="overlay"></div>
+    <div class="hero-content">
+        <h1>Explore the World<br>With Confidence</h1>
+        <p>Premium tours • Trusted service • Unforgettable journeys</p>
+        <a href="#packages" class="btn-primary">View Packages</a>
+    </div>
+</section>
+
+<section class="packages" id="packages">
+    <h2 class="section-title">Popular Packages</h2>
+
+    <div class="package-grid">
+        <div class="card">
+            <h3>Kashmir Escape</h3>
+            <p>5 Days / 4 Nights</p>
+            <span>₹18,000</span>
+            <button>Book Now</button>
+        </div>
+
+        <div class="card">
+            <h3>Manali Adventure</h3>
+            <p>6 Days / 5 Nights</p>
+            <span>₹22,000</span>
+            <button>Book Now</button>
+        </div>
+
+        <div class="card">
+            <h3>Goa Luxury Trip</h3>
+            <p>4 Days / 3 Nights</p>
+            <span>₹15,000</span>
+            <button>Book Now</button>
+        </div>
+    </div>
+</section>
+
+<section class="about" id="about">
+    <div class="container">
+        <h2 class="section-title">Why Choose Us</h2>
+        <p>
+            DreamTravel is a premium tour & travel company delivering
+            handpicked destinations, transparent pricing, and
+            personalized travel experiences across India.
+        </p>
+    </div>
+</section>
+
+<section class="contact" id="contact">
+    <h2 class="section-title">Get In Touch</h2>
+    <form>
+        <input type="text" placeholder="Your Name" required>
+        <input type="email" placeholder="Email Address" required>
+        <textarea placeholder="Your Message"></textarea>
+        <button type="submit">Send Message</button>
+    </form>
+</section>
+
+<footer>
+    <p>© 2026 DreamTravel. Crafted with care.</p>
+</footer>
+
+<script src="script.js"></script>
+</body>
+</html>
