--- a/index.html
+++ b/index.html
@@ -1,89 +1,107 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>DreamTravel | Explore Beautiful Destinations</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta charset="UTF-8">
+<title>DreamTravel | Premium Tours</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <!-- Google Font -->
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+<!-- SEO -->
+<meta name="description" content="DreamTravel – Premium tour & travel packages across India. Kashmir, Manali & Goa luxury holidays.">
+<meta name="keywords" content="tour and travel, kashmir tour, manali trip, goa holiday">
+<meta name="author" content="DreamTravel">
 
-    <link rel="stylesheet" href="style.css">
+<!-- Font -->
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+
+<!-- CSS -->
+<link rel="stylesheet" href="style.css?v=99">
 </head>
 <body>
 
 <header class="header">
-    <div class="container nav">
-        <div class="logo">Dream<span>Travel</span></div>
-        <nav>
-            <a href="#home">Home</a>
-            <a href="#packages">Packages</a>
-            <a href="#about">About</a>
-            <a href="#contact">Contact</a>
-        </nav>
-    </div>
+  <div class="nav">
+    <div class="logo">Dream<span>Travel</span></div>
+    <nav>
+      <a href="#home">Home</a>
+      <a href="#packages">Packages</a>
+      <a href="#contact">Contact</a>
+    </nav>
+  </div>
 </header>
 
-<section class="hero" id="home">
-    <div class="overlay"></div>
-    <div class="hero-content">
-        <h1>Explore the World<br>With Confidence</h1>
-        <p>Premium tours • Trusted service • Unforgettable journeys</p>
-        <a href="#packages" class="btn-primary">View Packages</a>
-    </div>
+<!-- HERO SLIDER -->
+<section class="hero-slider" id="home">
+  <div class="slide active" style="background-image:url('https://images.unsplash.com/photo-1507525428034-b723cf961d3e')"></div>
+  <div class="slide" style="background-image:url('https://images.unsplash.com/photo-1500530855697-b586d89ba3ee')"></div>
+  <div class="slide" style="background-image:url('https://images.unsplash.com/photo-1501785888041-af3ef285b470')"></div>
+
+  <div class="hero-content">
+    <h1>Travel Beyond Expectations</h1>
+    <p>Luxury tours • Trusted journeys • Curated experiences</p>
+    <a href="#packages" class="btn-primary">Explore Packages</a>
+  </div>
 </section>
 
+<!-- PACKAGES -->
 <section class="packages" id="packages">
-    <h2 class="section-title">Popular Packages</h2>
+  <h2 class="section-title">Popular Packages</h2>
 
-    <div class="package-grid">
-        <div class="card">
-            <h3>Kashmir Escape</h3>
-            <p>5 Days / 4 Nights</p>
-            <span>₹18,000</span>
-            <button>Book Now</button>
-        </div>
-
-        <div class="card">
-            <h3>Manali Adventure</h3>
-            <p>6 Days / 5 Nights</p>
-            <span>₹22,000</span>
-            <button>Book Now</button>
-        </div>
-
-        <div class="card">
-            <h3>Goa Luxury Trip</h3>
-            <p>4 Days / 3 Nights</p>
-            <span>₹15,000</span>
-            <button>Book Now</button>
-        </div>
+  <div class="package-grid">
+    <div class="card">
+      <h3>Kashmir Escape</h3>
+      <p>5 Days / 4 Nights</p>
+      <span>₹18,000</span>
+      <button onclick="openBooking('Kashmir Escape')">Book Now</button>
     </div>
+
+    <div class="card">
+      <h3>Manali Adventure</h3>
+      <p>6 Days / 5 Nights</p>
+      <span>₹22,000</span>
+      <button onclick="openBooking('Manali Adventure')">Book Now</button>
+    </div>
+
+    <div class="card">
+      <h3>Goa Luxury</h3>
+      <p>4 Days / 3 Nights</p>
+      <span>₹15,000</span>
+      <button onclick="openBooking('Goa Luxury')">Book Now</button>
+    </div>
+  </div>
 </section>
 
-<section class="about" id="about">
-    <div class="container">
-        <h2 class="section-title">Why Choose Us</h2>
-        <p>
-            DreamTravel is a premium tour & travel company delivering
-            handpicked destinations, transparent pricing, and
-            personalized travel experiences across India.
-        </p>
-    </div>
-</section>
-
+<!-- CONTACT -->
 <section class="contact" id="contact">
-    <h2 class="section-title">Get In Touch</h2>
-    <form>
-        <input type="text" placeholder="Your Name" required>
-        <input type="email" placeholder="Email Address" required>
-        <textarea placeholder="Your Message"></textarea>
-        <button type="submit">Send Message</button>
-    </form>
+  <h2 class="section-title">Contact Us</h2>
+  <form>
+    <input type="text" placeholder="Your Name" required>
+    <input type="email" placeholder="Email Address" required>
+    <textarea placeholder="Your Message"></textarea>
+    <button type="submit">Send Message</button>
+  </form>
 </section>
 
 <footer>
-    <p>© 2026 DreamTravel. Crafted with care.</p>
+  © 2026 DreamTravel • Premium Travel Experiences
 </footer>
+
+<!-- BOOKING MODAL -->
+<div class="booking-modal" id="bookingModal">
+  <div class="booking-box">
+    <h3>Book Your Trip</h3>
+    <p id="selectedPackage"></p>
+
+    <input type="text" id="name" placeholder="Full Name">
+    <input type="tel" id="phone" placeholder="Phone Number">
+    <input type="date" id="date">
+
+    <button onclick="sendBooking()">Send on WhatsApp</button>
+    <button class="close" onclick="closeBooking()">Cancel</button>
+  </div>
+</div>
+
+<!-- WHATSAPP FLOAT -->
+<a href="https://wa.me/917889333199" class="whatsapp" target="_blank">💬</a>
 
 <script src="script.js"></script>
 </body>
