--- a/index.html
+++ b/index.html
@@ -2,107 +2,135 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>DreamTravel | Premium Tours</title>
+<title>Kashmir Trails | Discover Kashmir</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<!-- SEO -->
-<meta name="description" content="DreamTravel – Premium tour & travel packages across India. Kashmir, Manali & Goa luxury holidays.">
-<meta name="keywords" content="tour and travel, kashmir tour, manali trip, goa holiday">
-<meta name="author" content="DreamTravel">
-
-<!-- Font -->
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-
-<!-- CSS -->
-<link rel="stylesheet" href="style.css?v=99">
+<link rel="stylesheet" href="style.css?v=1">
 </head>
 <body>
 
+<!-- TOP BAR -->
+<div class="topbar">
+  <span>Call us, we are open 24x7</span>
+  <strong>+91 7889333199</strong>
+</div>
+
+<!-- HEADER -->
 <header class="header">
   <div class="nav">
-    <div class="logo">Dream<span>Travel</span></div>
+    <div class="logo">Kashmir <span>Trails</span></div>
     <nav>
-      <a href="#home">Home</a>
-      <a href="#packages">Packages</a>
-      <a href="#contact">Contact</a>
+      <a href="#">Home</a>
+      <a href="#">Packages</a>
+      <a href="#">Destinations</a>
+      <a href="#">Contact</a>
     </nav>
   </div>
 </header>
 
-<!-- HERO SLIDER -->
-<section class="hero-slider" id="home">
-  <div class="slide active" style="background-image:url('https://images.unsplash.com/photo-1507525428034-b723cf961d3e')"></div>
-  <div class="slide" style="background-image:url('https://images.unsplash.com/photo-1500530855697-b586d89ba3ee')"></div>
-  <div class="slide" style="background-image:url('https://images.unsplash.com/photo-1501785888041-af3ef285b470')"></div>
+<!-- HERO -->
+<section class="hero">
+  <div class="hero-overlay">
+    <h1>Find your Best holiday</h1>
+    <p>Discover amazing adventure holidays and activities in Kashmir</p>
 
-  <div class="hero-content">
-    <h1>Travel Beyond Expectations</h1>
-    <p>Luxury tours • Trusted journeys • Curated experiences</p>
-    <a href="#packages" class="btn-primary">Explore Packages</a>
-  </div>
-</section>
-
-<!-- PACKAGES -->
-<section class="packages" id="packages">
-  <h2 class="section-title">Popular Packages</h2>
-
-  <div class="package-grid">
-    <div class="card">
-      <h3>Kashmir Escape</h3>
-      <p>5 Days / 4 Nights</p>
-      <span>₹18,000</span>
-      <button onclick="openBooking('Kashmir Escape')">Book Now</button>
-    </div>
-
-    <div class="card">
-      <h3>Manali Adventure</h3>
-      <p>6 Days / 5 Nights</p>
-      <span>₹22,000</span>
-      <button onclick="openBooking('Manali Adventure')">Book Now</button>
-    </div>
-
-    <div class="card">
-      <h3>Goa Luxury</h3>
-      <p>4 Days / 3 Nights</p>
-      <span>₹15,000</span>
-      <button onclick="openBooking('Goa Luxury')">Book Now</button>
+    <div class="search-box">
+      <input type="text" placeholder="Search your trip...">
+      <button>Search</button>
     </div>
   </div>
 </section>
 
-<!-- CONTACT -->
-<section class="contact" id="contact">
-  <h2 class="section-title">Contact Us</h2>
-  <form>
-    <input type="text" placeholder="Your Name" required>
-    <input type="email" placeholder="Email Address" required>
-    <textarea placeholder="Your Message"></textarea>
-    <button type="submit">Send Message</button>
-  </form>
+<!-- EXPERIENCE -->
+<section class="experience">
+  <h2>Experience Kashmir With Experts Who Care</h2>
+  <div class="underline"></div>
+
+  <p>
+    Welcome to Kashmir Trails — where every journey is crafted with passion,
+    precision, and a deep love for Kashmir. From personalized itineraries and
+    handpicked hotels to expert local guides and 24/7 support, we ensure your
+    trip is smooth, comfortable, and unforgettable.
+  </p>
+
+  <a href="#" class="btn-outline">View More</a>
 </section>
 
-<footer>
-  © 2026 DreamTravel • Premium Travel Experiences
+<!-- STATS -->
+<section class="stats">
+  <div class="stat">
+    <h3>641</h3>
+    <span>Customers Served</span>
+  </div>
+  <div class="stat">
+    <h3>843</h3>
+    <span>Successful Trips</span>
+  </div>
+  <div class="stat">
+    <h3>205</h3>
+    <span>Unique Experiences</span>
+  </div>
+  <div class="stat">
+    <h3>1,021</h3>
+    <span>Safe Transfers</span>
+  </div>
+</section>
+
+<!-- CTA -->
+<section class="cta">
+  <h2>Get Ready</h2>
+  <p>
+    Experience Kashmir the way it was meant to be — serene, breathtaking,
+    and unforgettable. Start planning your personalized journey today.
+  </p>
+  <a href="#" class="btn-primary">Browse Package</a>
+</section>
+
+<!-- FOOTER -->
+<footer class="footer">
+  <div class="footer-grid">
+    <div>
+      <h4>About the Agency</h4>
+      <p>
+        Kashmir Trails is a trusted Kashmir-based travel agency offering
+        customized tour packages, verified hotels, safe transportation,
+        and 24/7 customer support.
+      </p>
+    </div>
+
+    <div>
+      <h4>Top Destinations</h4>
+      <ul>
+        <li>Gulmarg</li>
+        <li>Sonmarg</li>
+        <li>Pahalgam</li>
+        <li>Srinagar</li>
+      </ul>
+    </div>
+
+    <div>
+      <h4>Quick Links</h4>
+      <ul>
+        <li>Tour Packages</li>
+        <li>Activities</li>
+        <li>Privacy Policy</li>
+        <li>Terms & Conditions</li>
+      </ul>
+    </div>
+
+    <div>
+      <h4>Contact Info</h4>
+      <p>Phone: +91 7889333199</p>
+      <p>Email: info@kashmirtrails.com</p>
+      <p>Working Hours: 24/7 Support</p>
+    </div>
+  </div>
+
+  <div class="copyright">
+    © 2026 Kashmir Trails. All Rights Reserved.
+  </div>
 </footer>
 
-<!-- BOOKING MODAL -->
-<div class="booking-modal" id="bookingModal">
-  <div class="booking-box">
-    <h3>Book Your Trip</h3>
-    <p id="selectedPackage"></p>
-
-    <input type="text" id="name" placeholder="Full Name">
-    <input type="tel" id="phone" placeholder="Phone Number">
-    <input type="date" id="date">
-
-    <button onclick="sendBooking()">Send on WhatsApp</button>
-    <button class="close" onclick="closeBooking()">Cancel</button>
-  </div>
-</div>
-
-<!-- WHATSAPP FLOAT -->
-<a href="https://wa.me/917889333199" class="whatsapp" target="_blank">💬</a>
-
-<script src="script.js"></script>
 </body>
 </html>
