--- a/index.html
+++ b/index.html
@@ -43,6 +43,93 @@
 </section>
 
 <!-- EXPERIENCE -->
+  <!-- FEATURED TRIP -->
+<section class="packages">
+  <h2 class="section-title">Featured Trip</h2>
+  <div class="underline"></div>
+
+  <div class="package-grid">
+    <div class="package-card">
+      <span class="price-tag">₹14,699</span>
+      <img src="https://images.unsplash.com/photo-1548013146-72479768bada" alt="">
+      <h3>Romantic Kashmir Honeymoon</h3>
+      <p>4 Nights / 5 Days</p>
+      <button>View Detail</button>
+    </div>
+
+    <div class="package-card">
+      <span class="price-tag">₹9,999</span>
+      <img src="https://images.unsplash.com/photo-1500530855697-b586d89ba3ee" alt="">
+      <h3>Kashmir Grand Explorer</h3>
+      <p>4 Nights / 5 Days</p>
+      <button>View Detail</button>
+    </div>
+  </div>
+
+  <a class="btn-outline center-btn">View All Trip</a>
+</section>
+
+<!-- DEALS -->
+<section class="packages light">
+  <h2 class="section-title">Deals and Discounts</h2>
+  <div class="underline"></div>
+
+  <div class="package-grid">
+    <div class="package-card">
+      <span class="discount">20% OFF</span>
+      <span class="price-tag">₹5,999</span>
+      <img src="https://images.unsplash.com/photo-1501785888041-af3ef285b470" alt="">
+      <h3>Kashmir Short Escape</h3>
+      <p>2 Nights / 3 Days</p>
+      <button>Book Now</button>
+    </div>
+
+    <div class="package-card">
+      <span class="discount">17% OFF</span>
+      <span class="price-tag">₹7,999</span>
+      <img src="https://images.unsplash.com/photo-1507525428034-b723cf961d3e" alt="">
+      <h3>Kashmir Scenic Getaway</h3>
+      <p>3 Nights / 4 Days</p>
+      <button>Book Now</button>
+    </div>
+  </div>
+
+  <a class="btn-outline center-btn">View All Deals</a>
+</section>
+
+<!-- BEST SELLERS -->
+<section class="packages">
+  <h2 class="section-title">Our Best Sellers Packages</h2>
+  <div class="underline"></div>
+
+  <div class="package-grid">
+    <div class="package-card">
+      <span class="price-tag">₹14,699</span>
+      <img src="https://images.unsplash.com/photo-1526772662000-3f88f10405ff" alt="">
+      <h3>Romantic Kashmir Honeymoon</h3>
+      <p>5 Days / 4 Nights</p>
+      <button>View Detail</button>
+    </div>
+
+    <div class="package-card">
+      <span class="price-tag">₹5,999</span>
+      <img src="https://images.unsplash.com/photo-1500530855697-b586d89ba3ee" alt="">
+      <h3>Kashmir Short Escape</h3>
+      <p>3 Days / 2 Nights</p>
+      <button>View Detail</button>
+    </div>
+
+    <div class="package-card">
+      <span class="price-tag">₹9,999</span>
+      <img src="https://images.unsplash.com/photo-1548013146-72479768bada" alt="">
+      <h3>Kashmir Grand Explorer</h3>
+      <p>5 Days / 4 Nights</p>
+      <button>View Detail</button>
+    </div>
+  </div>
+
+  <a class="btn-outline center-btn">View All Packages</a>
+</section>
 <section class="experience">
   <h2>Experience Kashmir With Experts Who Care</h2>
   <div class="underline"></div>
