--- a/index.html
+++ b/index.html
@@ -145,6 +145,61 @@
 </section>
 
 <!-- STATS -->
+  <!-- TRUST -->
+<section class="trust">
+  <img src="https://upload.wikimedia.org/wikipedia/commons/7/7e/Tripadvisor_Logo.svg" alt="TripAdvisor">
+  <h3>Kashmir Trails – Kashmir Valley Guided Tours</h3>
+  <p>⭐ ⭐ ⭐ ⭐ ⭐ (Based on 150+ traveler reviews)</p>
+  <strong>#1 of 98 Tours in Kashmir</strong>
+</section>
+
+<!-- ACTIVITIES -->
+<section class="activities">
+  <h2 class="section-title">Adventure Activities</h2>
+  <div class="underline"></div>
+
+  <div class="activity-grid">
+    <div class="activity">
+      <img src="https://images.unsplash.com/photo-1504712598893-24159a89200e">
+      <span>White Water Rafting</span>
+    </div>
+    <div class="activity">
+      <img src="https://images.unsplash.com/photo-1519681393784-d120267933ba">
+      <span>Skiing</span>
+    </div>
+    <div class="activity">
+      <img src="https://images.unsplash.com/photo-1526772662000-3f88f10405ff">
+      <span>Trekking</span>
+    </div>
+  </div>
+</section>
+
+<!-- BLOG -->
+<section class="blogs">
+  <h2 class="section-title">Latest Articles</h2>
+  <div class="underline"></div>
+
+  <div class="blog-grid">
+    <div class="blog-card">
+      <img src="https://images.unsplash.com/photo-1501785888041-af3ef285b470">
+      <h4>Best Time to Visit Kashmir</h4>
+      <p>Complete seasonal guide for planning your Kashmir trip.</p>
+    </div>
+    <div class="blog-card">
+      <img src="https://images.unsplash.com/photo-1500530855697-b586d89ba3ee">
+      <h4>Top Must-Visit Places in Kashmir</h4>
+      <p>Explore the most beautiful destinations in the valley.</p>
+    </div>
+    <div class="blog-card">
+      <img src="https://images.unsplash.com/photo-1526772662000-3f88f10405ff">
+      <h4>Kashmir Honeymoon Guide</h4>
+      <p>Romantic experiences for couples in Kashmir.</p>
+    </div>
+  </div>
+
+  <a class="btn-outline center-btn">View All Posts</a>
+</section>
+
 <section class="stats">
   <div class="stat">
     <h3>641</h3>
