--- a/package-detail.html
+++ b/package-detail.html
@@ -35,7 +35,7 @@
     <li>Day 5: Departure</li>
   </ul>
 
-  <a href="https://wa.me/919XXXXXXXXX" class="btn-primary">Book on WhatsApp</a>
+  <a href="https://wa.me/917889333199" class="btn-primary">Book on WhatsApp</a>
 </section>
 
 </body>
