--- a/index.html
+++ b/index.html
@@ -23,10 +23,11 @@
   <div class="nav">
     <div class="logo">Kashmir <span>Trails</span></div>
     <nav>
-      <a href="#">Home</a>
-      <a href="#">Packages</a>
-      <a href="#">Destinations</a>
-      <a href="#">Contact</a>
+     <a href="index.html">Home</a>
+<a href="packages.html">Packages</a>
+<a href="destinations.html">Destinations</a>
+<a href="contact.html">Contact</a>
+
     </nav>
   </div>
 </header>
